--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,8 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    outputs:
+      app_url: ${{ steps.deploy.outputs.app_url }}
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -18,6 +20,8 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
+      env:
+          APP_URL: ${{ needs.build_and_deploy.outputs.app_url }}
       run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: always()
