--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "bottle-recycler",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && tsc server.ts --outDir dist",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "npx playwright test --ui"
+    "test": "npx playwright test --ui",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -16,11 +17,13 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@playwright/test": "^1.48.2",
+    "@types/express": "^4.17.13",
     "@types/node": "^22.7.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -30,6 +33,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "typescript-eslint": "^8.12.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
