--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.24.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "esbuild": ">=0.25.0"
   }
 }
