--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
+  "homepage": "https://github.com/RangerChris/BottleRecycler",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build && tsc server.ts --outDir dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "npx playwright test --ui",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -31,6 +34,7 @@
     "eslint": "^9.24.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
