--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.0"
   }
