--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "homepage": "https://rangerchris.github.io/BottleRecycler",
   "scripts": {
     "dev": "vite",
+    "dev:coverage": "vite --mode coverage",
     "build": "tsc -b && vite build && tsc server.ts --outDir dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "npx playwright test --ui",
+    "test:coverage": "npx playwright test",
+    "run-tests-and-merge": "npx playwright test && node scripts/merge-coverage.js",
+    "coverage": "start-server-and-test \"npm run dev:coverage\" http://localhost:5173 \"npm run run-tests-and-merge\"",
+    "show-coverage": "npx playwright show-report coverage/report",
     "start": "node dist/server.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -40,6 +45,11 @@
     "ts-node": "^10.9.2",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.41.0",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vite-plugin-istanbul": "^3.0.0",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.0.0",
+    "start-server-and-test": "^1.14.0"
   }
 }
