--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "express-rate-limit": "^8.0.1"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
@@ -42,14 +42,14 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.0.0",
+    "start-server-and-test": "^2.0.13",
     "ts-node": "^10.9.2",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.41.0",
     "vite": "^7.1.3",
-    "vite-plugin-istanbul": "^3.0.0",
-    "istanbul-lib-coverage": "^3.0.0",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.0.0",
-    "start-server-and-test": "^1.14.0"
+    "vite-plugin-istanbul": "^3.0.0"
   }
 }
