--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bottle-recycler",
   "private": true,
   "version": "0.0.1",
-  "type": "commonjs",
+  "type": "module",
   "homepage": "https://rangerchris.github.io/BottleRecycler",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,8 @@
     "run-tests-and-merge": "npx playwright test && node scripts/merge-coverage.js",
     "coverage": "start-server-and-test \"npm run dev:coverage\" http://localhost:5173 \"npm run run-tests-and-merge\"",
     "show-coverage": "npx playwright show-report coverage/report",
+    "vitest:coverage": "vitest run --coverage",
+    "vitest:coverage:open": "start .\\coverage\\vitest\\index.html",
     "start": "node dist/server.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
@@ -31,11 +33,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@playwright/test": "^1.55.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "esbuild": "^0.25.10",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -45,11 +53,14 @@
     "istanbul-lib-coverage": "^3.2.2",
     "istanbul-lib-report": "^3.0.1",
     "istanbul-reports": "^3.2.0",
+    "jsdom": "^27.0.0",
+    "nyc": "^17.1.0",
     "start-server-and-test": "^2.1.2",
     "ts-node": "^10.9.2",
     "typescript": "5.9.2",
     "typescript-eslint": "^8.44.1",
     "vite": "^7.1.7",
-    "vite-plugin-istanbul": "^3.0.4"
+    "vite-plugin-istanbul": "^3.0.4",
+    "vitest": "^3.2.4"
   }
 }
