--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@mui/material": "^7.3.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
-    "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
@@ -38,9 +37,12 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -55,6 +57,7 @@
     "istanbul-reports": "^3.2.0",
     "jsdom": "^27.0.0",
     "nyc": "^17.1.0",
+    "react": "^19.1.1",
     "start-server-and-test": "^2.1.2",
     "ts-node": "^10.9.2",
     "typescript": "5.9.2",
